tests/data/placebo/test_timestream_influxdb_cluster_network_location/timestream-influxdb.ListTagsForResource_1.json
{
    "status_code": 200,
    "data": {
        "tags": {
            "c7n-public": "Policy"
        },
        "ResponseMetadata": {}
    }
}
